# commandline-dict

./: DESCRIPTION.txt  README.md  define  define.py  pyproject.toml  setup.py
src/define/: define.py
src/kwanele/: define.py
