[build-system]
requires = ["hatchling", "requests", "termcolor"]
build-backend = "hatchling.build"

[project]
name = "shelldict"
version = "0.0.1"
authors = [
  { name="Kwanele Gamedze", email="kwanelegamedze4@gmail.com" },
]
description = "A simple commandline dictionary."
readme = "README.md"
license = { file="LICENSE.txt" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/codekwan/shelldict"
"Bug Tracker" = "https://github.com/codekwan/shelldict/issues"
